@@ -5,6 +5,7 @@ Release 0.9
 -----------
 
 2009-10-30:
+- object::get_property_attributes API changed.
 - Boost 1.40 required.
 
 2009-10-25:
